@@ -2,7 +2,7 @@
 
 DOS2UNIX=NO
 FULLREBUILD=NO
-VERSIONPKG="3.6.7.RU.`date +%d%m%Y`"
+VERSIONPKG="3.7.0.RU.`date +%d%m%Y`"
 
 
 #---Set_env_ROOTDIR_to_current_dir---#
